增加视频评论（一级内容）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         <activity android:name=".ui.activity.home.VideoDesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            />
 
+        <activity android:name=".ui.activity.search.VideoTagActivity"/>
+        <activity android:name=".ui.activity.home.UserZoneActivity"/>
     </application>
 </manifest>
