--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,6 @@
         <activity android:name=".ui.activity.search.VideoTagActivity"/>
         <activity android:name=".ui.activity.home.UserZoneActivity"/>
         <activity android:name=".ui.activity.home.CommentDescActivity"/>
+        <activity android:name=".ui.activity.channel.ChannelDescActivity"/>
     </application>
 </manifest>
