模拟注册、登录功能； 完成个人中心相关功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,12 @@
         <activity android:name=".ui.activity.home.UserZoneActivity"/>
         <activity android:name=".ui.activity.home.CommentDescActivity"/>
         <activity android:name=".ui.activity.channel.ChannelDescActivity"/>
+        <activity android:name=".ui.activity.user.RegisterActivity"/>
+        <activity android:name=".ui.activity.user.RegisterNextActivity"/>
+        <activity android:name=".ui.activity.user.LoginActivity"/>
+        <activity android:name=".ui.activity.user.SetActivity"/>
+        <activity android:name=".ui.activity.user.CollectActivity"/>
+        <activity android:name=".ui.activity.user.VideoCacheActivity"/>
+        <activity android:name=".ui.activity.user.VideoHisActivity"/>
     </application>
 </manifest>
