--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.base.MainActivity">
+        <activity android:name=".ui.activity.base.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
         </activity>
 
         <activity android:name=".ui.activity.base.BaseActivity"/>
-        <activity android:name=".ui.activity.base.SplashActivity"/>
+        <activity android:name=".ui.activity.base.MainActivity"/>
         <activity android:name=".ui.activity.home.VideoDesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
@@ -43,5 +43,20 @@
         <activity android:name=".ui.activity.user.CollectActivity"/>
         <activity android:name=".ui.activity.user.VideoCacheActivity"/>
         <activity android:name=".ui.activity.user.VideoHisActivity"/>
+
+        <activity
+            android:name="com.tencent.bugly.beta.ui.BetaActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale"
+            android:theme="@android:style/Theme.Translucent" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 </manifest>
