--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
-apply from: 'tinker-support.gradle'
+//apply from: 'tinker-support.gradle'
 
 android {
     compileSdkVersion 24
@@ -79,5 +79,7 @@ dependencies {
 
     compile 'com.tencent.bugly:crashreport_upgrade:1.3.4'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+
+    compile 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
 
 }
