--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,14 @@
         <activity android:name=".ui.activity.user.VideoCacheActivity"/>
         <activity android:name=".ui.activity.user.VideoHisActivity"/>
 
+        <activity android:name=".ui.activity.base.CustomVersionDialogActivity"
+            android:theme="@style/versionCheckLibvtransparentTheme"/>
+
+        <service android:name="service.UpdataService"
+            android:enabled="true"
+            android:exported="true"/>
+
+
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
