--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
 
 
     compile 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
+
+    compile 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
