--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 //apply from: 'tinker-support.gradle'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "demo.soho.com.baogevideo"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -42,45 +41,45 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.+'
-    compile 'com.android.support:design:24.2.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:design:26.0.2'
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
+//    implementation 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
 
     //butterknife
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor  'com.jakewharton:butterknife-compiler:8.4.0'
 
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
-    compile 'com.facebook.fresco:fresco:1.5.0'
-    compile 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
+    implementation 'com.facebook.fresco:fresco:1.5.0'
+    implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
 
-    compile 'com.shuyu:GSYVideoPlayer:2.0.9'
+    implementation 'com.shuyu:GSYVideoPlayer:2.0.9'
 
-    compile 'com.bigkoo:svprogresshud:1.0.6'// 提示框
+    implementation 'com.bigkoo:svprogresshud:1.0.6'// 提示框
 
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
 
-    compile 'com.android.support:multidex:1.0.1' //多dex配置
+    implementation 'com.android.support:multidex:1.0.1' //多dex配置
 
-    compile 'com.zhy:flowlayout-lib:1.0.1'
+    implementation 'com.zhy:flowlayout-lib:1.0.1'
 
-    compile 'cn.jiguang.sdk:jpush:3.0.8'
-    compile 'cn.jiguang.sdk:jcore:1.1.6'
+    implementation 'cn.jiguang.sdk:jpush:3.0.8'
+    implementation 'cn.jiguang.sdk:jcore:1.1.6'
 
-    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
 
 
-    compile 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
+    implementation 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
 
-    compile 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
