--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,9 +77,9 @@ dependencies {
 
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
 
-
-    implementation 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
-
     implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation (name:'YoumiSdk_v7.5.1_2018-01-16', ext: 'aar')
 }
+
