--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,6 @@ android {
             //设置支持的SO库架构
             abiFilters 'armeabi', 'armeabi-v7a', 'x86'
         }
-        manifestPlaceholders = [
-                JPUSH_PKGNAME: applicationId,
-                JPUSH_APPKEY : " ",
-                JPUSH_CHANNEL: "yingyongbao",
-        ]
     }
     buildTypes {
         release {
@@ -36,6 +31,7 @@ android {
             minifyEnabled  false
             buildConfigField "boolean", "LOG", "true"
             buildConfigField "String", "URL_HOST", "\"http://api.baoge.tv/\""
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -72,14 +68,14 @@ dependencies {
 
     implementation 'com.zhy:flowlayout-lib:1.0.1'
 
-    implementation 'cn.jiguang.sdk:jpush:3.0.8'
-    implementation 'cn.jiguang.sdk:jcore:1.1.6'
-
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-
 
     implementation 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
 
     implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.tencent.bugly:crashreport_upgrade:1.3.4'
+
+    compile 'com.umeng.analytics:analytics:6.1.2'
 }
