--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,12 @@ android {
 
         ndk {
             //设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
         }
+//        manifestPlaceholders = [
+//                XG_ACCESS_ID:"2100277553",
+//                XG_ACCESS_KEY : "A8EIW5AL658N",
+//        ]
     }
     buildTypes {
         release {
@@ -37,45 +41,42 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.android.support:design:26.0.2'
     testImplementation 'junit:junit:4.12'
-
-//    implementation 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
-
+    //    implementation 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     //butterknife
     implementation 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor  'com.jakewharton:butterknife-compiler:8.4.0'
-
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.google.code.gson:gson:2.8.0'
-
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
-
     implementation 'com.shuyu:GSYVideoPlayer:4.0.0-beat1'
-
-    implementation 'com.bigkoo:svprogresshud:1.0.6'// 提示框
-
+    implementation 'com.bigkoo:svprogresshud:1.0.6'
+    // 提示框
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
-
-    implementation 'com.android.support:multidex:1.0.1' //多dex配置
-
+    implementation 'com.android.support:multidex:1.0.1'
+    //多dex配置
     implementation 'com.zhy:flowlayout-lib:1.0.1'
-
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-
-    implementation 'com.allenliu.versionchecklib:library:1.8.3'//{exclude module: "appcompat-v7"}
-
+    implementation 'com.allenliu.versionchecklib:library:1.8.3'
+    //{exclude module: "appcompat-v7"}
     implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
 
-    compile 'com.tencent.bugly:crashreport_upgrade:1.3.4'
+    implementation 'com.umeng.analytics:analytics:6.1.2'
 
-    compile 'com.umeng.analytics:analytics:6.1.2'
+    //信鸽jar
+//    compile 'com.tencent.xinge:xinge:3.2.0-release'
+//    //wup包
+//    compile 'com.tencent.wup:wup:1.0.0.E-release'
+//    //mid包
+//    compile 'com.tencent.mid:mid:4.0.0-release'
 }
