--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,6 @@ android {
             //设置支持的SO库架构
             abiFilters 'armeabi', 'armeabi-v7a', 'x86'
         }
-        manifestPlaceholders = [
-                JPUSH_PKGNAME: applicationId,
-                JPUSH_APPKEY : " ",
-                JPUSH_CHANNEL: "yingyongbao",
-        ]
     }
     buildTypes {
         release {
@@ -72,14 +67,13 @@ dependencies {
 
     implementation 'com.zhy:flowlayout-lib:1.0.1'
 
-    implementation 'cn.jiguang.sdk:jpush:3.0.8'
-    implementation 'cn.jiguang.sdk:jcore:1.1.6'
-
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
 
     implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation (name:'YoumiSdk_v7.5.1_2018-01-16', ext: 'aar')
+
+    implementation 'com.umeng.analytics:analytics:6.1.2'
 }
 
