--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,6 @@ android {
             //设置支持的SO库架构
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
         }
-//        manifestPlaceholders = [
-//                XG_ACCESS_ID:"2100277553",
-//                XG_ACCESS_KEY : "A8EIW5AL658N",
-//        ]
     }
     buildTypes {
         release {
@@ -35,7 +31,15 @@ android {
             minifyEnabled  false
             buildConfigField "boolean", "LOG", "true"
             buildConfigField "String", "URL_HOST", "\"http://api.baoge.tv/\""
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    dexOptions {  //JVM堆内存的大小 OutOfMemoryError： PermGen space
+        javaMaxHeapSize "4g"
+        preDexLibraries = false
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -71,12 +75,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
 
-    implementation 'com.umeng.analytics:analytics:6.1.2'
-
-    //信鸽jar
-//    compile 'com.tencent.xinge:xinge:3.2.0-release'
-//    //wup包
-//    compile 'com.tencent.wup:wup:1.0.0.E-release'
-//    //mid包
-//    compile 'com.tencent.mid:mid:4.0.0-release'
+    implementation 'com.umeng.sdk:analytics:7.4.1'
 }
