--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,17 @@
 apply plugin: 'com.android.application'
-//apply from: 'tinker-support.gradle'
+apply from: 'tinker-support.gradle'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'Change'
+            keyPassword 'change'
+            storeFile file('E:/source/BaogeVideo/change.jks')
+            storePassword 'change'
+            v1SigningEnabled false
+            v2SigningEnabled false
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
@@ -16,8 +26,13 @@ android {
 
         ndk {
             //设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
         }
+
+        manifestPlaceholders = [
+                XG_ACCESS_ID : "2100277553",
+                XG_ACCESS_KEY : "A8EIW5AL658N",
+        ]
     }
     buildTypes {
         release {
@@ -31,15 +46,6 @@ android {
             minifyEnabled  false
             buildConfigField "boolean", "LOG", "true"
             buildConfigField "String", "URL_HOST", "\"http://api.baoge.tv/\""
-        }
-    }
-    dexOptions {  //JVM堆内存的大小 OutOfMemoryError： PermGen space
-        javaMaxHeapSize "4g"
-        preDexLibraries = false
-    }
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -60,7 +66,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
-    implementation 'com.shuyu:GSYVideoPlayer:4.0.0-beat1'
+    implementation 'com.shuyu:GSYVideoPlayer:2.0.9'
     implementation 'com.bigkoo:svprogresshud:1.0.6'
     // 提示框
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
@@ -68,12 +74,19 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.1'
     //多dex配置
     implementation 'com.zhy:flowlayout-lib:1.0.1'
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.1'
-    implementation 'com.allenliu.versionchecklib:library:1.8.3'
-    //{exclude module: "appcompat-v7"}
     implementation 'com.ycjiang:VideoPlayModule-Lite:1.9.93'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation(name: 'YoumiSdk_v7.6.0_2018-06-14', ext: 'aar')
+    implementation files('libs/umeng-common-1.4.3.jar')
+    implementation files('libs/umeng-analytics-7.4.1.jar')
+
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
 
-    implementation 'com.umeng.sdk:analytics:7.4.1'
+    //信鸽jar
+    implementation 'com.tencent.xinge:xinge:3.2.0-release'
+    //wup包
+    implementation 'com.tencent.wup:wup:1.0.0.E-release'
+    //mid包
+    implementation 'com.tencent.mid:mid:4.0.0-release'
 }
+
