--- a/app/tinker-support.gradle
+++ b/app/tinker-support.gradle
@@ -4,7 +4,7 @@ def bakPath = file("${buildDir}/bakApk/")
 /**
  * 此处填写每次构建生成的基准包目录
  */
-def baseApkDir = "app-0129-16-59-57"
+def baseApkDir = "app-0304-10-22-38"
 /**
  * 对于插件各参数的详细解析请参考
  */
@@ -31,7 +31,7 @@ tinkerSupport {
     baseApkResourceMapping = "${bakPath}/${baseApkDir}/app-release-R.txt"
 
     // 构建基准包和补丁包都要指定不同的tinkerId，并且必须保证唯一性
-    tinkerId = "patch-1.0.0"
+    tinkerId = "base-more-2.1.2.0"
 
     // 构建多渠道补丁时使用
 //    buildAllFlavorsDir = "${bakPath}/${baseApkDir}"
