--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".ui.activity.user.CollectActivity"/>
         <activity android:name=".ui.activity.user.VideoCacheActivity"/>
         <activity android:name=".ui.activity.user.adv.NativeSpotAdActivity"/>
+        <!--视频详情-->
         <activity android:name=".ui.activity.home.VideoDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
